Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/CRM_Account_Event_Out__e.object-meta.xml
<CustomObject>
    <description>Platform event published from Salesforce for Account insert and updates, which will be consumed by Kafka</description>
    <label>CRM Account Event - Out</label>
    <pluralLabel>CRM Account Events - Out</pluralLabel>
</CustomObject>