Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/accountIDToMergeTo__c.field-meta.xml
<CustomField>
    <fullName>accountIDToMergeTo__c</fullName>
    <label>accountIDToMergeTo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>