Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/birthDate__c.field-meta.xml
<CustomField>
    <fullName>birthDate__c</fullName>
    <label>birthDate</label>
    <type>Date</type>
</CustomField>