Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/businessEmail__c.field-meta.xml
<CustomField>
    <fullName>businessEmail__c</fullName>
    <label>businessEmail</label>
    <length>80</length>
    <type>Text</type>
</CustomField>