Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/languageCode__c.field-meta.xml
<CustomField>
    <fullName>languageCode__c</fullName>
    <label>languageCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>