Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/mailOptin__c.field-meta.xml
<CustomField>
    <fullName>mailOptin__c</fullName>
    <label>mailOptin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>