Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/middleName__c.field-meta.xml
<CustomField>
    <fullName>middleName__c</fullName>
    <label>middleName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>