Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/nickName__c.field-meta.xml
<CustomField>
    <fullName>nickName__c</fullName>
    <label>nickName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>