Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/payorName__c.field-meta.xml
<CustomField>
    <fullName>payorName__c</fullName>
    <label>payorName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>