Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/pumpManufacturer__c.field-meta.xml
<CustomField>
    <fullName>pumpManufacturer__c</fullName>
    <label>pumpManufacturer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>