Prod-EU/force-app/main/default/objects/CRM_Account_Event_Out__e/fields/smsOptin__c.field-meta.xml
<CustomField>
    <fullName>smsOptin__c</fullName>
    <label>smsOptin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>